src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_code_block.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"Assistant:                                                  "
"  [rust]                                                    "
"  fn main() {}                                              "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
