src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_list.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"Assistant:                                                  "
"  • item one                                                "
"  • item two                                                "
"  • item three                                              "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
