src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_ordered_list_non_sequential.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 959
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Assistant:                                                │"
"│  2. first                                                │"
"│  4. second                                               │"
"│  8. third                                                │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
