src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_ordered_list_sequential.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 980
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Assistant:                                                │"
"│  1. alpha                                                │"
"│  2. beta                                                 │"
"│  3. gamma                                                │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
