src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_table.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Assistant:                                                │"
"│  ```                                                     │"
"│  ┌───────┬─────┐                                         │"
"│  │ Name  │ Age │                                         │"
"│  ╞═══════╪═════╡                                         │"
"│  │ Alice │ 30  │                                         │"
"│  ├───────┼─────┤                                         │"
"│  │ Bob   │ 25  │                                         │"
"│  └───────┴─────┘                                         │"
"│  ```                                                     │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
