src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_table_in_assistant_with_surrounding_text.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"Assistant:                                                  "
"  # Results                                                 "
"                                                            "
"  File    │ Lines                                           "
"  ────────┼──────                                           "
"  main.rs │ 100                                             "
"  lib.rs  │ 200                                             "
"                                                            "
"  See above.                                                "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
