src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_table_overflow_wraps_cells.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"Assistant:                              "
"  Colu │ Colum │ Column  │ Colum        "
"  mn   │ n     │ Three   │ n            "
"  One  │ Two   │         │ Four         "
"  ─────┼───────┼─────────┼──────        "
"  Long │ Anoth │ Yet     │ Final        "
"  valu │ er    │ another │ long         "
"  e    │ long  │ long    │ value        "
"  here │ value │ value   │              "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
