src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_table_with_alignment.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Assistant:                                                │"
"│  ```                                                     │"
"│  ┌────────┬────────┬───────┐                             │"
"│  │ Left   │ Center │ Right │                             │"
"│  ╞════════╪════════╪═══════╡                             │"
"│  │ a      │   b    │     c │                             │"
"│  ├────────┼────────┼───────┤                             │"
"│  │ longer │  mid   │     r │                             │"
"│  └────────┴────────┴───────┘                             │"
"│  ```                                                     │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
