src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_markdown_table_with_cjk_and_emoji.snap
---
source: src/frontend/tui/conversation_area.rs
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│Assistant:                                                │"
"│  言語    │ 記号                                          │" Hidden by multi-width symbols: [(4, " "), (6, " "), (14, " "), (16, " ")]
"│  ────────┼─────                                          │"
"│  🦀 Rust │ ✓                                             │" Hidden by multi-width symbols: [(4, " ")]
"│  Python  │ ✗                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
