src/frontend/tui/snapshots/illustrious_manager__frontend__tui__conversation_area__tests__render_no_search.snap
---
source: src/frontend/tui/conversation_area.rs
assertion_line: 2063
expression: terminal.backend()
---
"┌Conversation──────────────────────────────────────────────┐"
"│You:                                                      │"
"│  hello world                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
